# flask-sqlorm

./: .gitignore  README.md  example.py  flask_sqlorm.py  pyproject.toml
src/flask_sqlorm/: __init__.py  encrypted.py
