[project]
name = "flask-sqlorm"
version = "0.2.0"
description = "Flask integration for sqlorm"
authors = [
    {"name" = "Maxime Bouroumeau-Fuseau", email = "maxime.bouroumeau@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "flask~=3.0",
    "sqlorm-py~=0.2"
]

[project.urls]
Repository = "https://github.com/hyperflask/flask-sqlorm"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]
postgresql = [
    "psycopg[binary]>=3.1.18,<4.0.0"
]
mysql = [
    "mysql-connector-python>=8.3.0,<9.0.0"
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
